fix: nicer alignment

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,8 +5,8 @@
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  //justify-content: center;
+  //align-items: center;
 }
 
 .main {
@@ -14,7 +14,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  //justify-content: center;
   align-items: center;
   max-width: 75em;
   width: 100%;
